force-app/main/default/objects/OpenAI_Log__c/OpenAI_Log__c.object-meta.xml
<CustomObject>
    <label>OpenAI Log</label>
    <nameField>
        <displayFormat>OAIL-{0}</displayFormat>
        <label>OpenAI Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpenAI Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>