force-app/main/default/objects/OpenAI_Log__c/fields/Completion_Token__c.field-meta.xml
<CustomField>
    <fullName>Completion_Token__c</fullName>
    <label>Completion Token</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>