force-app/main/default/objects/OpenAI_Log__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Problem</label>
    <referenceTo>Problem__c</referenceTo>
    <relationshipLabel>OpenAI Logs</relationshipLabel>
    <relationshipName>OpenAI_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>