force-app/main/default/objects/OpenAI_Log__c/fields/Total_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Total_Tokens__c</fullName>
    <label>Total Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>